# spbstu_science_of_programming

./: .gitignore
CMakeProject/: CMakeLists.txt  README.md  funcln.cpp  funcsin.cpp  functan.cpp  main.cpp
CMakeProject1/: README.md  algorithm.cpp  funccos.cpp  funcln.cpp  funcpower.cpp  funcsin.cpp  main.cpp  struct.h
Calculator/: CMakeLists.txt  algorithm.cpp  main.cpp
Wrapper/: CMakeLists.txt  Engine.h  Subject.h  Wrapper.h  main.cpp
XmlTree/: CMakeLists.txt  XmlParser.cpp  XmlParser.h  XmlResource.cpp  XmlResource.h  XmlTree.h  main.cpp  tree.xml
lab_calculator_final/: .gitignore  README.md
lab_calculator_final/calc/: algorithm.cpp  main.cpp  struct.h
lab_calculator_final/funccos/funccos/: funccos.cpp
lab_calculator_final/funcpower/funcpower/: funcpower.cpp
